[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_fastapi_app"
version = "0.1.0"
description = "A FastAPI application with a React frontend"
authors = ["Your Name <you@example.com>"]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint]
load-plugins = ["pylint_fastapi"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
